...
                                    <constraint firstAttribute="height" constant="48" id="fpI-X6-lzy"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войи ">
                                    <color key="titleColor" name="YP Black"/>
                                </state>
                                <buttonConfiguration key="configuration" style="tinted" title="Войти" cornerStyle="fixed">
                                    <backgroundConfiguration key="background" cornerRadius="16">
                                        <color key="backgroundColor" name="YP White"/>
                                    </backgroundConfiguration>
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="16"/>
                                    <color key="baseForegroundColor" name="YP Black"/>
                                </buttonConfiguration>
...
                                    <color key="titleColor" name="YP Black"/>
                                </state>
                                <connections>
                                    <action selector="didTapShareButton:" destination="kwv-55-esW" eventType="touchUpInside" id="fdf-75-EwI"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" restorationIdentifier="nav back button white" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="faM-pN-1zx" userLabel="Back Button">
                                <rect key="frame" x="0.0" y="12" width="59" height="46"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="aUB-lx-R7l"/>
                                    <constraint firstAttribute="width" constant="48" id="cRh-H4-zgj"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
